infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/v1/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000
          - pathType: ImplementationSpecific
            path: /images/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000
          - path: /api/v1/courses/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/lessons/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/directory/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/exercise/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/sections/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/carts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-srv
                port:
                  number: 5000
          - path: /api/v1/reviews/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: review-srv
                port:
                  number: 5000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
#     service.beta.kubernetes.io/do-loadbalancer-hostname: "www.api-server-test.xyz"
#   labels:
#     helm.sh/chart: ingress-nginx-2.0.3
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/version: 0.32.0
#     app.kubernetes.io/managed-by: Helm
#     app.kubernetes.io/component: controller
#   name: ingress-nginx-controller
#   namespace: ingress-nginx
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: http
#     - name: https
#       port: 443
#       protocol: TCP
#       targetPort: https
#   selector:
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/component: controller
